tests/compError/topLevelReturn.ucl
// compError
// error: unexpected return
// tests/compError/topLevelReturn.ucl:5 -> here

ret 10;